--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indian-language-voice-assistant",
+  "name": "personal-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
